tests/ui/conditional-compilation/cfg-arg-invalid-8.rs
//@ compile-flags: --cfg )

fn main() {}

//~? ERROR invalid `--cfg` argument: `)` (expected `key` or `key="value"`)
